# otus_cpp_8

./: CMakeLists.txt  build.sh  conanfile.txt
.github/workflows/: cmake-single-platform.yml
src/: duplicate_finder.h  filesystem_path_hash.cpp  filesystem_path_hash.h  filesystem_travercer.h  main.cpp  mask_filesystem_traverser.cpp  mask_filesystem_traverser.h
src/hash/: crc16.cpp  crc16.h  crc32.cpp  crc32.h
